# FlowRulZ

./: .dockerignore  .gitignore  .golangci.yml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  QUALITY.md  README.md  docker-compose.yml  flowrulz-visual-guide (1).html  go.mod  go.mod 16-24-03-674.mod
.internal/: AGENTS.md
.opencode/: skills.json
docs/: README.md  admin-http.md  architecture-overview.md  architecture-review-complete.md  bytecode-format.md  cache-system.md  cluster-model.md  development.md  dsl-syntax.md  engineering-audit.md  ffi-api.md  file-index.md  flow-architecture.md  flow-dsl.md  flows.md  (+11 more)
k8s/: README.md  (+5 more)
runtime/: Cargo.toml
runtime/benches/: flowrulz_bench.rs
runtime/src/: error.rs
runtime/src/bytecode/: consts.rs  dag_table.rs  event.rs  execution.rs  instruction.rs  mod.rs  opcode.rs  plan.rs  resolved_type.rs  services.rs
runtime/src/dsl/compiler/: complexity.rs  dag.rs  mod.rs  schema.rs  type_check.rs
runtime/src/dsl/lexer/: mod.rs  token.rs
runtime/src/dsl/optimizer/: constant_fold.rs  mod.rs  passes.rs
runtime/src/dsl/parser/: nodes.rs
runtime/src/executor/: chunk.rs  dag.rs  emit.rs  gate.rs  helpers.rs  map.rs  mod.rs  next.rs  parallel.rs  runtime.rs  vm.rs
runtime/src/executor/expr/: mod.rs  utility.rs
runtime/src/executor/plugin/: loader.rs  runtime.rs
runtime/src/ffi/: compile.rs  execute.rs  lifecycle.rs  memory.rs  mod.rs  services.rs  tracing.rs
runtime/src/memory/: arena.rs  intern.rs
runtime/src/tracing/: mod.rs
sdk/python/: .gitignore  pyproject.toml
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
(+526 files in other folders)
