[package]
name = "flowrulz-core"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
bumpalo = { version = "3", features = ["collections"] }
boxcar = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "fast-rng"] }
rand = "0.8"

once_cell = "1"
bincode = "1"
wasmtime = "24"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
wat = "1"

[[bench]]
name = "flowrulz_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
