[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "flowrulz"
version = "0.1.0"
description = "FlowRulZ Python SDK"
requires-python = ">=3.10"
dependencies = ["requests>=2.31"]

[tool.setuptools.packages.find]
where = ["."]
include = ["flowrulz*"]
