[package]
name = "flowrulz-sdk"
version = "0.1.0"
edition = "2024"
description = "FlowRulZ SDK for Rust"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

[dev-dependencies]
wiremock = "0.6"
